before changing ann model to rnn

--- a/risk_adaptive_trading.ipynb
+++ b/risk_adaptive_trading.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
     "start_price_index = 2125 # this should be (25 + start_state_num from the risk_q_learning file)\n",
     "duration = 700 # this should be the same as the duration in risk_q_learning\n",
     "comparison_offset = 25 # this should be the same as window_size in risk_adaptive_trading_data_generation\n",
-    "stock_symbol = 'c'\n",
+    "stock_symbol = 'bac'\n",
     "capital = 10000\n",
     "''''''\n",
     "\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -216,19 +216,19 @@
      "output_type": "stream",
      "text": [
       "Risk Level: -1\n",
-      "-3540.0292356767404\n",
+      "0\n",
       "Risk Level: -0.5\n",
-      "-4182.220558263482\n",
+      "-3231.24076909\n",
       "Risk Level: -0.2\n",
-      "-2269.0591219199705\n",
+      "-3144.0664450999957\n",
       "Risk Level: 0\n",
-      "1249.9831609415342\n",
+      "-5045.750616165997\n",
       "Risk Level: 0.2\n",
-      "-376.7869615944637\n",
+      "-5047.694311191997\n",
       "Risk Level: 0.5\n",
-      "-265.5204844609616\n",
+      "-4095.659792227989\n",
       "Risk Level: 1\n",
-      "-3744.7781755017495\n"
+      "-5550.3516\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
       "697/700\n",
       "698/700\n",
       "699/700\n",
-      "Profit:-287.13444808272106\n"
+      "Profit:-2948.8323637780077\n"
      ]
     }
    ],
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1321,14 +1321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2501.3312000129863\n"
+      "-3539.8460838300007\n"
      ]
     }
    ],
@@ -1404,93 +1404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\jing yang\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\pandas\\core\\indexing.py:189: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c- ppo_decay : 1, rsi_decay : 1\n",
-      "-1860.0497711032222\n",
-      "c- ppo_decay : 1, rsi_decay : 2\n",
-      "4.358029077782703\n",
-      "c- ppo_decay : 1, rsi_decay : 3\n",
-      "1539.2320137962834\n",
-      "c- ppo_decay : 1, rsi_decay : 4\n",
-      "1777.17531615002\n",
-      "c- ppo_decay : 1, rsi_decay : 5\n",
-      "1515.3585185072752\n",
-      "c- ppo_decay : 1, rsi_decay : 6\n",
-      "2381.0626836505216\n",
-      "c- ppo_decay : 1, rsi_decay : 7\n",
-      "2789.42740535727\n",
-      "c- ppo_decay : 1, rsi_decay : 8\n",
-      "2711.262177388531\n",
-      "c- ppo_decay : 1, rsi_decay : 9\n",
-      "4403.032173149046\n",
-      "c- ppo_decay : 1, rsi_decay : 10\n",
-      "3743.1173800677807\n",
-      "c- ppo_decay : 1, rsi_decay : 11\n",
-      "3620.6263153230375\n",
-      "c- ppo_decay : 1, rsi_decay : 12\n",
-      "3293.919627870542\n",
-      "c- ppo_decay : 1, rsi_decay : 13\n",
-      "3009.256190390288\n",
-      "c- ppo_decay : 1, rsi_decay : 14\n",
-      "2973.623228809789\n",
-      "c- ppo_decay : 1, rsi_decay : 15\n",
-      "2890.4128960692888\n",
-      "c- ppo_decay : 1, rsi_decay : 16\n",
-      "2890.4128960692888\n",
-      "c- ppo_decay : 1, rsi_decay : 17\n",
-      "2955.5912248677887\n",
-      "c- ppo_decay : 1, rsi_decay : 18\n",
-      "2772.6791553735147\n",
-      "c- ppo_decay : 1, rsi_decay : 19\n",
-      "2238.6590509635407\n",
-      "c- ppo_decay : 1, rsi_decay : 20\n",
-      "2238.6590509635407\n",
-      "c- ppo_decay : 1, rsi_decay : 21\n",
-      "2134.442254465035\n",
-      "c- ppo_decay : 1, rsi_decay : 22\n",
-      "2540.001471122043\n",
-      "c- ppo_decay : 1, rsi_decay : 23\n",
-      "2540.001471122043\n",
-      "c- ppo_decay : 1, rsi_decay : 24\n",
-      "2540.001471122043\n",
-      "c- ppo_decay : 1, rsi_decay : 25\n",
-      "2822.158301695543\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-89b13aea495c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmultiplier_ppo\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mmultiplier_rsi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mcombined_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_combined_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecay_alpha_ppo\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmultiplier_ppo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdecay_alpha_rsi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmultiplier_rsi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mppo_k\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtruncated_ppo_k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrsi_k\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtruncated_rsi_k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtechnical_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtruncated_technical_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcrashes_k\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtruncated_crashes_k\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'k'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'k'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'pos_k_hl_copy'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'neg_k_hl_copy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'pos_k_hl_copy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-5-514e98bb54c1>\u001b[0m in \u001b[0;36mget_combined_k\u001b[1;34m(decay_alpha_ppo, decay_alpha_rsi, ppo_k, rsi_k, technical_data, crashes_k)\u001b[0m\n\u001b[0;32m    231\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 233\u001b[1;33m     \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl_copy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"NEG_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"POS_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ADX\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m0.25\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    234\u001b[0m     \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl_copy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"NEG_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"POS_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ADX\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    235\u001b[0m     \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl_copy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"NEG_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"POS_DI14\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtechnical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ADX\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m40\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombined_k\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"neg_k_hl\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jing yang\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m    187\u001b[0m             \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    188\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_setitem_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 189\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_setitem_with_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    190\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    191\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_validate_key\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jing yang\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_setitem_with_indexer\u001b[1;34m(self, indexer, value)\u001b[0m\n\u001b[0;32m    644\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    645\u001b[0m             \u001b[1;31m# check for chained assignment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 646\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_check_is_chained_assignment_possible\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    647\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    648\u001b[0m             \u001b[1;31m# actually do the set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jing yang\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_check_is_chained_assignment_possible\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2625\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mref\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mref\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_is_mixed_type\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2626\u001b[0m                 self._check_setitem_copy(stacklevel=4, t='referant',\n\u001b[1;32m-> 2627\u001b[1;33m                                          force=True)\n\u001b[0m\u001b[0;32m   2628\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2629\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_is_copy\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\jing yang\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_check_setitem_copy\u001b[1;34m(self, stacklevel, t, force)\u001b[0m\n\u001b[0;32m   2672\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2673\u001b[0m                 \u001b[0mgc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2674\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mgc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_referents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_is_copy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2675\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_is_copy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2676\u001b[0m                     \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "'for multiplier_ppo in range(1, 30, 1):     \\n    for multiplier_rsi in range(1, 30, 1): \\n        combined_k = get_combined_k(decay_alpha_ppo=multiplier_ppo, decay_alpha_rsi=multiplier_rsi, ppo_k=truncated_ppo_k, rsi_k=truncated_rsi_k, technical_data=truncated_technical_data, crashes_k=truncated_crashes_k)\\n        combined_k[\\'k\\'] = 0\\n        combined_k[\\'k\\'].loc[combined_k[\\'pos_k_hl_copy\\'] > combined_k[\\'neg_k_hl_copy\\']] = combined_k[\\'pos_k_hl_copy\\'] \\n        combined_k[\\'k\\'].loc[combined_k[\\'neg_k_hl_copy\\'] > combined_k[\\'pos_k_hl_copy\\']] = -1 * combined_k[\\'neg_k_hl_copy\\'] \\n\\n        combined_k[\\'k\\'] = combined_k[\\'k\\'].apply(closest_k)\\n        combined_k[\\'trading_action\\'] = 0\\n        combined_k[\\'trading_action\\'] = combined_k.apply(to_action, axis=1)\\n\\n        print(stock_symbol + \\'- ppo_decay : \\' + str(multiplier_ppo) + \\', rsi_decay : \\' + str(multiplier_rsi))\\n        profit = calculate_profit(combined_k)\\n        print(profit)\\n        \\n        if best_profit is None or profit > best_profit:\\n            best_profit = profit\\n            best_ppo_decay = multiplier_ppo\\n            best_rsi_decay = multiplier_rsi\\n        \\n        profits.append(profit)\\n\\n\\nprint(\"Best Profit: \" + str(best_profit))\\nprint(\"Best PPO_DECAY: \" + str(best_ppo_decay))\\nprint(\"Best RSI_DECAY: \" + str(best_rsi_decay))\\n'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1505,7 +1432,7 @@
     "truncated_crashes_k = crashes_k[start_date_index:end_date_index+1].reset_index(drop=True)\n",
     "truncated_technical_data = technical_data[start_date_index:end_date_index+1].reset_index(drop=True)\n",
     "\n",
-    "for multiplier_ppo in range(1, 30, 1):     \n",
+    "'''for multiplier_ppo in range(1, 30, 1):     \n",
     "    for multiplier_rsi in range(1, 30, 1): \n",
     "        combined_k = get_combined_k(decay_alpha_ppo=multiplier_ppo, decay_alpha_rsi=multiplier_rsi, ppo_k=truncated_ppo_k, rsi_k=truncated_rsi_k, technical_data=truncated_technical_data, crashes_k=truncated_crashes_k)\n",
     "        combined_k['k'] = 0\n",
@@ -1530,7 +1457,8 @@
     "\n",
     "print(\"Best Profit: \" + str(best_profit))\n",
     "print(\"Best PPO_DECAY: \" + str(best_ppo_decay))\n",
-    "print(\"Best RSI_DECAY: \" + str(best_rsi_decay))\n"
+    "print(\"Best RSI_DECAY: \" + str(best_rsi_decay))\n",
+    "'''"
    ]
   },
   {
@@ -1544,7 +1472,7 @@
    "cell_type": "code",
    "execution_count": 145,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1598,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1788.0286584162805\n"
+      "-4273.888212291997\n"
      ]
     }
    ],
